Almost done with Assignment #13

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,16 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+
+    //attempt to fix FirebaseUser
+    compile 'com.google.firebase:firebase-core:11.4.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    //fixed FirebaseAuth
+    compile 'com.google.firebase:firebase-auth:16.0.3'
+
+    //compile "com.google.android.gms:play-services-gcm:9.2.1"
 }
